# autotrend

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: routes.py
backend/integrations/: facebook_client.py  gemini_client.py  google_trends_client.py  groq_client.py  instagram_client.py  news_rss_client.py  openrouter_client.py  pexels_client.py  pixabay_client.py  reddit_client.py  social_trends_client.py  twitter_scraper.py  youtube_client.py
backend/pipelines/: video_pipeline.py
backend/services/: niche_filter_service.py  script_service.py  subtitle_service.py  trend_service.py  uploader_service.py  video_editor.py  video_fetcher.py  voice_service.py
backend/utils/: file_manager.py  keyword_extractor.py  logger.py  retry_handler.py
frontend/: index.html  vite.config.js
frontend/electron/: main.js  preload.js
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  LogViewer.jsx  NicheSelector.jsx  PlatformSelector.jsx  StatusBadge.jsx  VideoQueue.jsx
frontend/src/pages/: Home.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
