[project]
name = "autotrend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-auth-oauthlib>=1.3.0",
    "groq>=1.1.0",
    "moviepy>=2.2.1",
    "nltk>=3.9.3",
    "praw>=7.8.1",
    "pysrt>=1.1.2",
    "python-dotenv>=1.2.2",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "snscrape>=0.7.0.20230622",
    "spacy>=3.8.11",
    "uvicorn>=0.41.0",
]
