[project]
name = "autotrend"
version = "0.1.0"
description = "AI-powered automated short video creation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "groq>=0.9.0",
    "requests>=2.31.0",
    "praw>=7.7.1",
    "pytrends>=4.9.2",
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "pysrt>=1.1.2",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.127.0",
    "nltk>=3.8.1",
    "google-cloud-texttospeech>=2.35.0",
]
